--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,12 @@ cities:
         name: "Trade Tech"
         description: "Trade Tech, based in Bellevue, WA with offices located around the globe, specializes in creating software solutions for the international logistics industry. Trade Tech's logistics and technology experts have created world-class applications linking sales, operations and accounting processes into a single environment. These applications are proven to help streamline freight forwarders' and shippers' supply chains, cut total transportation costs, manage exceptions, deliver visibility, and provide higher levels of customer service to help you compete in today's complex logistics environment."
         logo: "trade-tech.png"
+    - name: "Silicon Valley"
+      site: "http://www.meetup.com/CanJS-Silicon-Valley"
+      sponsor:
+        name: "BrightTRoll"
+        logo: "brightroll.jpg"
+        description: "BrightRoll is the largest independent video advertising platform for reaching audiences across web, mobile and connected TV. BrightRoll powers digital video advertising for the world’s largest brands, it reaches 4 in 5 online video viewers and serves more video ads than any other company thus collecting and analyzing hundreds of billions of data points a month and enabling real-time decisions that drive ROI for advertisers."
     - name: "Zagreb, Croatia"
       site: "http://www.meetup.com/CanJS-Zagreb/"
       logo: "zagreb.jpeg"
